Below fix were applied:
❌ CRITICAL PENDING
Constants: Infinite loop bug:

// Constants.java - INFINITE LOOP:
public static Constants getInstance() {
    return Constants.getInstance();  // Calls itself forever!
}
// SHOULD BE:
public static Constants getInstance() {
    return instance;
}

we were using singleton, not sure why this is wrong, maybe many of other classes have uage on this, need to fix it

DoctorService: Needs refactoring to remove AIHelper dependency => We will have to implement the AI helper by using gemini AI API key, will look into this after some time
DoctorService: ❌ Uses AIHelper dependency (may not exist or be incomplete)
Missing basic CRUD methods (updateDoctor, deleteDoctor)
Missing polymorphic search methods (searchDoctor(String), searchDoctor(int))
Missing getDoctorFees() and updateDoctorFees()
in ui package,divide every menu just like appointment menu(already implemented), billing menu, doctor menu, patient menu and integrate in main menu so main.java will have main menu, and ui will have the other module menu.

⚠️ MEDIUM PRIORITY PENDING
Entity Layer
Bill: getMedicineList() returns null (placeholder)
Bill: Missing applyDiscount() method

errors thrown by IDE:
Class 'Doctor' must either be declared abstract or implement abstract method 'matchesId(int)' in 'Searchable'
Interface expected here
Exception 'java.lang.CloneNotSupportedException' is never thrown in the corresponding try block

Appointment: Missing Cloneable implementation
Appointment: Missing equals(), hashCode(), toString()
Appointment: Should be abstract class