@@ -3,7 +3,6 @@ package com.airtribe.meditrack.service;
 import com.airtribe.meditrack.entity.persons.Doctor;
 import com.airtribe.meditrack.entity.persons.Specialization;
 import com.airtribe.meditrack.exception.DoctorNotFoundException;
-import com.airtribe.meditrack.util.AIHelper;
 import com.airtribe.meditrack.util.DataStore;
 
 import java.util.List;
@@ -12,7 +11,6 @@ import java.util.Optional;
 public class DoctorService {
 
     private final DataStore<Doctor> doctorStore = new DataStore<>();
-    private final AIHelper aiHelper = new AIHelper();
 
     public void addDoctor(Doctor doctor) {
         doctorStore.add(String.valueOf(doctor.getDoc_id()), doctor);
@@ -30,28 +28,87 @@ public class DoctorService {
         return doctorStore.filter(doctor -> doctor.matches(searchTerm));
     }
 
+    public Doctor searchDoctor(String searchTerm) {
+        List<Doctor> results = searchDoctors(searchTerm);
+        return results.isEmpty() ? null : results.get(0);
+    }
+
+    public Doctor searchDoctor(int id) {
+        List<Doctor> results = doctorStore.getAll().stream()
+                .filter(doctor -> doctor.matchesId(id))
+                .toList();
+        return results.isEmpty() ? null : results.get(0);
+    }
+
+    public boolean updateDoctor(Doctor doctor) {
+        if (doctor == null || !doctorStore.contains(String.valueOf(doctor.getDoc_id()))) {
+            return false;
+        }
+        doctorStore.add(String.valueOf(doctor.getDoc_id()), doctor);
+        return true;
+    }
+
+    public boolean deleteDoctor(int docId) {
+        if (!doctorStore.contains(String.valueOf(docId))) {
+            return false;
+        }
+        doctorStore.remove(String.valueOf(docId));
+        return true;
+    }
+
+    public double getDoctorFees(int docId) {
+        Doctor doctor = getDoctorById(docId);
+        if (doctor == null) {
+            throw new DoctorNotFoundException("Doctor with ID " + docId + " not found");
+        }
+        return doctor.getFees();
+    }
+
+    public boolean updateDoctorFees(int docId, double newFees) {
+        Doctor doctor = getDoctorById(docId);
+        if (doctor == null) {
+            return false;
+        }
+        doctor.setFees(newFees);
+        return true;
+    }
+
     public List<Doctor> getDoctorsBySpecialization(Specialization specialization) {
-        return aiHelper.recommendDoctorsBySpecialization(doctorStore.getAll(), specialization);
+        return doctorStore.getAll().stream()
+                .filter(doctor -> doctor.getSpecialization() == specialization)
+                .toList();
     }
 
     public List<Doctor> getDoctorsByMaxFee(double maxFee) {
-        return aiHelper.recommendDoctorsByMaxFee(doctorStore.getAll(), maxFee);
+        return doctorStore.getAll().stream()
+                .filter(doctor -> doctor.getFees() <= maxFee)
+                .toList();
     }
 
     public List<Doctor> getDoctorsByName(String nameFragment) {
-        return aiHelper.recommendDoctorsByName(doctorStore.getAll(), nameFragment);
+        return doctorStore.getAll().stream()
+                .filter(doctor -> doctor.matchesName(nameFragment))
+                .toList();
     }
 
     public List<Doctor> getTopRatedDoctors(int limit) {
-        return aiHelper.recommendTopRatedDoctors(doctorStore.getAll(), limit);
+        return doctorStore.getAll().stream()
+                .limit(limit)
+                .toList();
     }
 
     public double getAverageFee() {
-        return aiHelper.computeAverageFee(doctorStore.getAll());
+        return doctorStore.getAll().stream()
+                .mapToDouble(Doctor::getFees)
+                .average()
+                .orElse(0.0);
     }
 
     public List<Doctor> filterDoctors(Specialization specialization, double maxFee) {
-        return aiHelper.filterDoctors(doctorStore.getAll(), specialization, maxFee);
+        return doctorStore.getAll().stream()
+                .filter(doctor -> doctor.getSpecialization() == specialization)
+                .filter(doctor -> doctor.getFees() <= maxFee)
+                .toList();
     }
 
     public Doctor findDoctorById(int docId) {
@@ -78,12 +135,12 @@ public class DoctorService {
     public List<Doctor> getDoctorsSortedByFeeAscending() {
         return doctorStore.getAll().stream()
                 .sorted((d1, d2) -> Double.compare(d1.getFees(), d2.getFees()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     public List<Doctor> getDoctorsSortedByFeeDescending() {
         return doctorStore.getAll().stream()
                 .sorted((d1, d2) -> Double.compare(d2.getFees(), d1.getFees()))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 }
